# CudaDemo

./: .gitignore  CMakeLists.txt  README.md
include/utils/: cuda_utils.h
src/: main.cu
src/utils/: cub_block_scan.cu  cub_dynamic_parallelism.cu  transpose.cu
src/utils/05_reduce/: reduce.cu  reduce_raking_vs_warp_shuffle.cu
src/utils/07_hist/: hist.cu
src/utils/08_copy_if/: copy_if.cu
src/utils/09_gelu/: gelu_bad.cu  gelu_vanilla.cu
src/utils/10_fused_biased_mask_scale_add/: fused_biased_mask_scale_add_fp16.cu  fused_biased_mask_scale_add_fp32.cu
src/utils/11_softmax/: online_softmax.cu  online_softmax_without_cub.cu  softmax.cu
src/utils/12_measure_peak_bandwidth_and_flops/: measure_peak_bandwidth.cu
src/utils/12_measure_peak_flops/: measure_peak_flops.cu
src/utils/13_cuda_streams/: cuda_streams.cu
src/utils/15_gemv/: gemv.cu
src/utils/16_dropout/: dropout.cu
src/utils/80_transpose/: transpose.cu  transpose_unroll_degrades.cu
src/utils/81_gemm/: gemm_cc.cu
src/utils/81_im2col/: im2col.cu
src/utils/82_scan/: scan.cu
src/utils/83_mini_flash_attention/: mini_flash_attention.cu  mini_flash_attention.py
src/utils/84_layernorm/: layernorm.cu
src/utils/85_rmsnorm/: rmsnorm.cu
src/utils/89_gemm/: gemm_tc.cu
src/utils/90_transpose/: transpose.cu
src/utils/99_misc/: 1.cu  trash.cu  vec_st_test.cu
src/utils/reduce/: reduce.cu  test_v5_v6.cu
src/utils/transpose/: transpose.cu  transpose_unroll_degrades.cu
